force-app/main/default/objects/IT_Usage__c/IT_Usage__c.object-meta.xml
<CustomObject>
    <label>Usage</label>
    <nameField>
        <displayFormat>2020-{0000}</displayFormat>
        <label>Usage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>