force-app/main/default/objects/IT_Usage__c/fields/IT_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Account_Number__c</fullName>
    <formula>Subscription_Product_Charge__r.Zuora__Subscription__r.Zuora__CustomerAccount__r.Zuora__AccountNumber__c</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>