force-app/main/default/objects/IT_Usage__c/fields/IT_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>IT_Charge_ID__c</fullName>
    <formula>Subscription_Product_Charge__r.Zuora__ChargeNumber__c</formula>
    <label>Charge ID</label>
    <type>Text</type>
</CustomField>