force-app/main/default/objects/IT_Usage__c/fields/IT_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of Use</label>
    <type>Date</type>
</CustomField>