force-app/main/default/objects/IT_Usage__c/fields/IT_Description__c.field-meta.xml
<CustomField>
    <fullName>IT_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>