force-app/main/default/objects/IT_Usage__c/fields/IT_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>