force-app/main/default/objects/IT_Usage__c/fields/IT_Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>IT_Invoice_number__c</fullName>
    <label>Invoice number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>