force-app/main/default/objects/IT_Usage__c/fields/IT_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>IT_Invoice_Status__c</fullName>
    <description>Invoice status from kiwi</description>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Invoice to be processed</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Client not found</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Incorrect accounting key (account / center / intercompany)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Wrong account / VAT</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Invoice not in balance (Give / Take)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Incorrect taxable amount / tax</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Incoherent invoice date</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Invoice correctly processed</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Error processing Header</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Error processing detail</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Error processing Foot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>