force-app/main/default/objects/IT_Usage__c/fields/IT_Num_Subscription__c.field-meta.xml
<CustomField>
    <fullName>IT_Num_Subscription__c</fullName>
    <formula>Subscription_Product_Charge__r.Zuora__Subscription__r.Zuora__SubscriptionNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num_Subscription</label>
    <type>Text</type>
</CustomField>