force-app/main/default/objects/IT_Usage__c/fields/IT_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IT_Ordered_Quantity__c</fullName>
    <formula>1
/*Subscription_Product_Charge__r.IT_Ordered_Value__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>