force-app/main/default/objects/IT_Usage__c/fields/IT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_Percentage__c</fullName>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>