force-app/main/default/objects/IT_Usage__c/fields/IT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IT_Quantity__c</fullName>
    <formula>Subscription_Product_Charge__r.Zuora__Price__c*IT_Percentage__c</formula>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>