force-app/main/default/objects/IT_Usage__c/fields/IT_Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IT_Remaining_Quantity__c</fullName>
    <formula>IT_Ordered_Quantity__c -  IT_Used_Quantity__c</formula>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>