force-app/main/default/objects/IT_Usage__c/fields/IT_Usage_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IT_Usage_Quantity__c</fullName>
    <formula>IF(
 CONTAINS(IT_Usage_Type__c , &quot;Rate&quot;) ,
TEXT(IT_Percentage__c*100)&amp; &quot;%&quot;,
 TEXT(IT_Used_Quantity__c)
 
)</formula>
    <label>Usage Quantity</label>
    <type>Text</type>
</CustomField>