force-app/main/default/objects/IT_Usage__c/fields/IT_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Usage_Type__c</fullName>
    <formula>IF( ISBLANK(Subscription_Product_Charge__r.Zuora__UnitOfMeasure__c) , Subscription_Product_Charge__r.Zuora__UOM__c, Subscription_Product_Charge__r.Zuora__UnitOfMeasure__r.Name)</formula>
    <label>Usage Type</label>
    <type>Text</type>
</CustomField>