force-app/main/default/objects/IT_Usage__c/fields/IT_Used_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IT_Used_Quantity__c</fullName>
    <label>Used Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>