force-app/main/default/objects/IT_Usage__c/fields/IT_Zuora_ID__c.field-meta.xml
<CustomField>
    <fullName>IT_Zuora_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Zuora ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>