force-app/main/default/objects/IT_Usage__c/fields/Quote_Rate_Plan_Charge__c.field-meta.xml
<CustomField>
    <fullName>Quote_Rate_Plan_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Rate Plan Charge</label>
    <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
    <relationshipLabel>Usage</relationshipLabel>
    <relationshipName>Usage</relationshipName>
    <type>Lookup</type>
</CustomField>