force-app/main/default/objects/IT_Usage__c/fields/Subscription_Product_Charge__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product_Charge__c</fullName>
    <label>Subscription Product &amp; Charge</label>
    <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
    <relationshipLabel>Usage</relationshipLabel>
    <relationshipName>Usage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>