force-app/main/default/objects/IT_Usage__c/recordTypes/IT_Consumption_Usage.recordType-meta.xml
<RecordType>
    <fullName>IT_Consumption_Usage</fullName>
    <active>false</active>
    <label>Consumption Usage</label>
</RecordType>