force-app/main/default/objects/IT_Usage__c/recordTypes/IT_Insert_Usage.recordType-meta.xml
<RecordType>
    <fullName>IT_Insert_Usage</fullName>
    <active>true</active>
    <label>Insert Usage</label>
</RecordType>