force-app/main/default/objects/IT_Usage__c/recordTypes/IT_Installment_Usage.recordType-meta.xml
<RecordType>
    <fullName>IT_Installment_Usage</fullName>
    <active>false</active>
    <label>Installment Usage</label>
</RecordType>